ICTSD-96: Green icon shift resolved #3

--- a/web/modules/custom/it_route_trip_tools/assets/css/it-route-trip-tools.css
+++ b/web/modules/custom/it_route_trip_tools/assets/css/it-route-trip-tools.css
@@ -894,7 +894,7 @@ html body.path-plan-your-trip .main-container .row .region-highlighted {
   background-size: cover;
   height: 103%;
   margin-left: -2px;
-  padding-left: 5px;
+  padding-left: 6px;
   width: 21px;
 }
 #inbound-large-screen-route-table table.table tbody tr th,
